Hardcoded APK names for now.

--- a/wercker.yml
+++ b/wercker.yml
@@ -40,10 +40,10 @@ deploy:
         sudo pip install awscli
     - koding/s3put@0.0.3:
       name: Upload Release APK to S3
-        key-id: $S3_KEY_ID
-        key-secret: $S3_KEY_SECRET
-        file: $WERCKER_CACHE_DIR/<razorpay-app>-v*.apk
-        url: s3://<razorpay-s3-enpoint>/<razorpay-app>-v*.apk
+        key-id: $RZP_S3_KEY_ID
+        key-secret: $RZP_S3_KEY_SECRET
+        file: $WERCKER_CACHE_DIR/razorpay-android-sample-app-v*.apk
+        url: s3://<razorpay-s3-enpoint>/razorpay-android-sample-app-v*.apk
     # - script:
     #   name: Upload Main APK to S3
     #   code: |
