--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,11 @@ buildscript {
 
 apply plugin: 'com.android.application'
 
+repositories {
+    mavenCentral()
+}
+
+
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
@@ -33,4 +38,5 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile('com.razorpay:razorpay-android:0.13.0')
 }
