--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,17 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.razorpay.sampleapp"
-      android:versionCode="8"
-      android:versionName="1.5">
-    <application android:icon="@mipmap/ic_launcher" android:label="Razorpay Sample App" android:theme="@android:style/Theme.Material.Light.NoActionBar">
-        <activity android:name="PaymentActivity" android:label="Razorpay Sample App">
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.razorpay.sampleapp"
+    android:versionCode="8"
+    android:versionName="1.5"
+    >
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+
+    <application
+        android:icon="@mipmap/ic_launcher"
+        android:label="Razorpay Sample App"
+        android:theme="@style/AppTheme"
+        android:allowBackup="false"
+        >
+
+        <activity
+            android:name="PaymentActivity"
+            android:label="Razorpay Sample App"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.razorpay.CheckoutActivity" android:configChanges="keyboard|keyboardHidden|orientation|screenSize"></activity>
+
+        <activity
+            android:name="com.razorpay.CheckoutActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
+            />
+
     </application>
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+
 </manifest>
