--- a/build.gradle
+++ b/build.gradle
@@ -1,42 +1,23 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 buildscript {
     repositories {
         jcenter()
     }
-
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.2'
+        classpath 'com.android.tools.build:gradle:2.1.3'
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
     }
 }
 
-apply plugin: 'com.android.application'
-
-repositories {
-    mavenCentral()
-}
-
-
-android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
-
-    defaultConfig {
-        minSdkVersion 11
-        targetSdkVersion 23
-    }
-
-    buildTypes {
-        debug {
-            minifyEnabled false
-            proguardFile 'proguard-project.txt'
-        }
-        release {
-            minifyEnabled true
-            proguardFile 'proguard-project.txt'
-        }
+allprojects {
+    repositories {
+        jcenter()
     }
 }
 
-dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile('com.razorpay:razorpay-android:0.13.0')
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
