--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,5 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile('com.razorpay:checkout:1.0.1')
+    compile('com.razorpay:checkout:1.+')
 }
