--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
 
     <application
+        android:name=".SampleApp"
         android:icon="@mipmap/ic_launcher"
         android:label="Razorpay Sample App"
         android:theme="@style/AppTheme"
@@ -31,6 +32,11 @@
             android:value="rzp_live_ILgsfZCZoFIKMb"
             />
 
-    </application>
+        <!-- Fabric key for Crashlytics -->
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="${FABRIC_KEY}"
+            />
 
+    </application>
 </manifest>
