--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
     buildToolsVersion '25.0.3'
 
     defaultConfig {
+        applicationId "com.razorpay.newsampleapp"
         minSdkVersion 14
         targetSdkVersion 25
     }
