--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,9 +33,8 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
     //Enabled for amazon pay
-    /*
-    implementation 'com.android.support:customtabs:26.1.0'
-    implementation(name: 'razorpay-amazonpay', ext: 'aar')
-    implementation(name: 'PayWithAmazon', ext: 'aar')*/
-    implementation (name: 'checkout-1.5.6', ext: 'aar')
+    implementation 'com.android.support:customtabs:28.0.0'
+    implementation(name: 'razorpay-amazonpay-debug', ext: 'aar')
+    implementation(name: 'PayWithAmazon', ext: 'aar')
+    implementation 'com.razorpay:checkout:1.5.8'
 }
