--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,9 +32,15 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
-    //Enabled for amazon pay
+    //Enabled for google pay SDK integration
+    //implementation 'com.android.support:customtabs:28.0.0'
+    //implementation(name: 'razorpay-googlepay-1.2.0-debug', ext: 'aar')
+    //implementation(name: 'tez-client-api-0.9.4', ext: 'aar')
+
+    //Enable for Amazon pay SDK integration
+    //implementation(name: 'razorpay-amazonpay', ext: 'aar')
+    //implementation(name: 'PayWithAmazon', ext: 'aar')
+
+    implementation 'com.razorpay:checkout:1.5.14'
     implementation 'com.android.support:customtabs:28.0.0'
-    implementation(name: 'razorpay-amazonpay-debug', ext: 'aar')
-    implementation(name: 'PayWithAmazon', ext: 'aar')
-    implementation 'com.razorpay:checkout:1.5.8'
 }
