--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     android:versionName="2.6"
     >
 
+    <uses-permission android:name="android.permission.READ_SMS"/>
+
     <application
         android:icon="@mipmap/ic_launcher"
         android:label="Razorpay Sample App"
