Kotlin feature update done.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-android'
 
 repositories {
     mavenCentral()
@@ -32,9 +34,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
-    //Enabled for amazon pay
     implementation 'com.android.support:customtabs:28.0.0'
-    implementation(name: 'razorpay-amazonpay-debug', ext: 'aar')
-    implementation(name: 'PayWithAmazon', ext: 'aar')
     implementation 'com.razorpay:checkout:1.5.8'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
