--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,9 @@ android {
             proguardFile 'proguard-project.txt'
         }
     }
+    dataBinding {
+        enabled true
+    }
 }
 
 dependencies {
@@ -46,4 +49,6 @@ dependencies {
     implementation 'com.razorpay:checkout:1.5.16'
     implementation "androidx.core:core-ktx:+"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 }
