--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
     - name: 🤔 Need some help in Integrations
-      url: https://razorpay.com/integrations/
+      url: https://razorpay.com/docs/payment-gateway/android-integration/standard/
       about: Looking for help with your app? Please refer to the integration documentation.
