--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(include: ['*.aar'], dir: 'libs')
 
     //Enabled for google pay SDK integration
     implementation 'com.android.support:customtabs:28.0.0'
@@ -43,7 +43,12 @@ dependencies {
     //implementation(name: 'razorpay-amazonpay-1.3.0', ext: 'aar')
     //implementation(name: 'PayWithAmazon', ext: 'aar')
 
-    implementation 'com.razorpay:checkout:1.5.16'
+//    implementation 'com.razorpay:checkout:1.5.16'
+    implementation 'com.google.android.gms:play-services-tasks:15.0.1'
+    implementation 'com.google.android.gms:play-services-wallet:18.0.0'
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
+    implementation 'com.google.android.gms:play-services-auth-api-phone:17.1.0'
+
     implementation "androidx.core:core-ktx:+"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
