--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-android'
+//apply plugin: 'kotlin-android'
+//apply plugin: 'kotlin-android-extensions'
+
 
 repositories {
     mavenCentral()
@@ -22,26 +23,33 @@ android {
     buildTypes {
         debug {
             minifyEnabled false
+            debuggable true
             proguardFile 'proguard-project.txt'
         }
         release {
-            minifyEnabled true
+            minifyEnabled false
+            debuggable true
             proguardFile 'proguard-project.txt'
         }
     }
 }
 
 dependencies {
-    implementation fileTree(include: ['*.aar'], dir: 'libs')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
 
     //Enabled for google pay SDK integration
     implementation 'com.android.support:customtabs:28.0.0'
-    //implementation(name: 'razorpay-googlepay-1.3.0', ext: 'aar')
-    //implementation(name: 'tez-client-api-0.9.4', ext: 'aar')
+    implementation(name: 'razorpay-googlepay-1.3.0-debug', ext: 'aar')
+    implementation(name: 'google-pay-client-api-1.0.0', ext: 'aar')
 
     //Enable for Amazon pay SDK integration
     //implementation(name: 'razorpay-amazonpay-1.3.0', ext: 'aar')
     //implementation(name: 'PayWithAmazon', ext: 'aar')
+
+    //implementation 'com.razorpay:checkout:1.6.2'
+    implementation(name: 'checkout-otpelf', ext: 'aar')
+    //implementation "androidx.core:core-ktx:+"
+    //implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
 //    implementation 'com.razorpay:checkout:1.5.16'
     implementation 'com.google.android.gms:play-services-tasks:15.0.1'
