--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,22 +10,24 @@ repositories {
 }
 
 android {
-    compileSdkVersion 28
-    buildToolsVersion '28.0.3'
+    compileSdkVersion 29
+    buildToolsVersion '29.0.3'
 
     defaultConfig {
         applicationId "com.razorpay.newsampleapp"
         minSdkVersion 19
-        targetSdkVersion 28
+        targetSdkVersion 29
     }
 
     buildTypes {
         debug {
-            minifyEnabled false
+            minifyEnabled true
+            debuggable false
             proguardFile 'proguard-project.txt'
         }
         release {
             minifyEnabled true
+            debuggable false
             proguardFile 'proguard-project.txt'
         }
     }
@@ -35,15 +37,15 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
     //Enabled for google pay SDK integration
-    implementation 'com.android.support:customtabs:28.0.0'
+    implementation 'com.android.support:customtabs:29.0.0'
     //implementation(name: 'razorpay-googlepay-1.3.0', ext: 'aar')
-    //implementation(name: 'tez-client-api-0.9.4', ext: 'aar')
+    //implementation(name: 'google-pay-client-api-1.0.0', ext: 'aar')
 
     //Enable for Amazon pay SDK integration
     //implementation(name: 'razorpay-amazonpay-1.3.0', ext: 'aar')
     //implementation(name: 'PayWithAmazon', ext: 'aar')
 
-    implementation 'com.razorpay:checkout:1.5.16'
+    implementation 'com.razorpay:checkout:1.6.6'
     implementation "androidx.core:core-ktx:+"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
