--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.razorpay.sampleapp"
-    android:versionCode="20"
-    android:versionName="3.0"
+    android:versionCode="24"
+    android:versionName="3.4"
     >
 
 
@@ -17,13 +17,13 @@
             android:name=".java.PaymentActivity"
             android:label="Razorpay Sample App"
             >
-
-        </activity>
-        <activity android:name=".kotlin.PaymentActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".kotlin.PaymentActivity">
+
         </activity>
 
         <!-- Add your API key here -->
@@ -31,6 +31,9 @@
             android:name="com.razorpay.ApiKey"
             android:value="rzp_live_ILgsfZCZoFIKMb"
             />
+        <meta-data
+            android:name="com.google.android.gms.wallet.api.enabled"
+            android:value="true" />
 
     </application>
 
