--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,15 @@
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.razorpay.sampleapp"
-    android:versionCode="24"
-    android:versionName="3.4"
+    android:versionCode="25"
+    android:versionName="3.5"
     >
 
 
     <application
         android:icon="@mipmap/ic_launcher"
         android:label="Razorpay Sample App"
-        android:theme="@style/AppTheme"
-        >
+        android:theme="@style/AppTheme">
 
         <activity
             android:name=".java.PaymentActivity"
@@ -36,5 +35,4 @@
             android:value="true" />
 
     </application>
-
 </manifest>
