--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,13 +10,13 @@ repositories {
 }
 
 android {
-    compileSdkVersion 28
-    buildToolsVersion '28.0.3'
+    compileSdkVersion 30
+    buildToolsVersion '30.0.3'
 
     defaultConfig {
         applicationId "com.razorpay.newsampleapp"
         minSdkVersion 19
-        targetSdkVersion 28
+        targetSdkVersion 30
     }
 
     buildTypes {
@@ -36,18 +36,19 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
     //For Razorpay checkout SDK
-    implementation 'com.razorpay:checkout:1.6.7'
+    implementation 'com.razorpay:checkout:1.6.10'
 
     //Enabled for google pay SDK integration
     //You need to whitelist your app package name at Razorpay to use this.
-    implementation(name: 'razorpay-googlepay-1.3.0', ext: 'aar')
-    implementation(name: 'google-pay-client-api-1.0.0', ext: 'aar')
+    //implementation(name: 'razorpay-googlepay-1.3.0', ext: 'aar')
+    //implementation(name: 'google-pay-client-api-1.0.0', ext: 'aar')
 
     //Enable for Amazon pay SDK integration.
     //You need to whitelist your apps package name at razrpay first to use this
     implementation(name: 'razorpay-amazonpay-1.3.0', ext: 'aar')
     implementation(name: 'PayWithAmazon', ext: 'aar')
-    implementation 'com.android.support:customtabs:28.0.0'
+    //implementation(name: 'checkout-otpelf',ext: 'aar')
+   // implementation 'com.android.support:customtabs:28.0.0'
 
     implementation 'com.google.android.gms:play-services-auth-api-phone:17.1.0'
     implementation "androidx.core:core-ktx:1.3.2"
