--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,13 +10,13 @@ repositories {
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
     buildToolsVersion '30.0.3'
 
     defaultConfig {
         applicationId "com.razorpay.newsampleapp"
         minSdkVersion 19
-        targetSdkVersion 30
+        targetSdkVersion 31
     }
 
     buildTypes {
@@ -30,17 +30,26 @@ android {
             proguardFile 'proguard-project.txt'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    buildFeatures {
+        viewBinding = true
+    }
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
     //For Razorpay checkout SDK
-    implementation 'com.razorpay:checkout:1.6.10'
+//    implementation 'com.razorpay:checkout:1.6.15'
+    implementation 'com.razorpay:gpay:1.0.0'
 
     //Enabled for google pay SDK integration
     //You need to whitelist your app package name at Razorpay to use this.
-    //implementation(name: 'razorpay-googlepay-1.3.0', ext: 'aar')
+    implementation(name: 'checkout-otpelf', ext: 'aar')
     //implementation(name: 'google-pay-client-api-1.0.0', ext: 'aar')
 
     //Enable for Amazon pay SDK integration.
@@ -53,4 +62,11 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth-api-phone:17.1.0'
     implementation "androidx.core:core-ktx:1.3.2"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.google.android.gms:play-services-wallet:18.0.0'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+    implementation 'com.google.android.gms:play-services-tasks:15.0.1'
+    implementation 'androidx.browser:browser:1.0.0'
+
 }
