--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,38 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.razorpay.sampleapp"
     android:versionCode="25"
-    android:versionName="3.5"
-    >
-
+    android:versionName="3.5">
 
     <application
         android:icon="@mipmap/ic_launcher"
         android:label="Razorpay Sample App"
         android:theme="@style/AppTheme">
-
         <activity
-            android:name=".java.PaymentActivity"
-            android:label="Razorpay Sample App"
-            >
+            android:theme="@style/AppTheme"
+            android:name=".kotlin.PaymentActivityKt"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".kotlin.PaymentActivity">
+        <activity
+            android:name=".java.PaymentActivity"
+            android:label="Razorpay Sample App">
 
-        </activity>
-
-        <!-- Add your API key here -->
+        </activity> <!-- Add your API key here -->
         <meta-data
             android:name="com.razorpay.ApiKey"
-            android:value="rzp_live_ILgsfZCZoFIKMb"
-            />
+            android:value="rzp_live_OwPnQuHrOcVAax" />
         <meta-data
             android:name="com.google.android.gms.wallet.api.enabled"
             android:value="true" />
-
     </application>
+
 </manifest>
