--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     ext.kotlin_version = '1.3.72'
     ext.kotlin_version = '1.3.61'
     repositories {
-        jcenter()
+        mavenCentral()
         google()
     }
     dependencies {
@@ -18,7 +18,7 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
+        mavenCentral()
         google()
     }
 }
