Updated app to the latest AGP and compile SDK version. Increased the build version to the latest 1.6.20. Kotlin support

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,38 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.razorpay.sampleapp"
     android:versionCode="25"
-    android:versionName="3.5"
-    >
-
+    android:versionName="3.5">
 
     <application
         android:icon="@mipmap/ic_launcher"
         android:label="Razorpay Sample App"
         android:theme="@style/AppTheme">
-
         <activity
-            android:name=".java.PaymentActivity"
-            android:label="Razorpay Sample App"
-            >
-            <intent-filter>
+            android:name=".MainActivity"
+            android:exported="true">
+            <intent-filter
+                >
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".kotlin.PaymentActivity">
-
+        <activity
+            android:name=".java.PaymentActivity"
+            android:label="Razorpay Sample App"
+            android:exported="true">
         </activity>
-
-        <!-- Add your API key here -->
+        <activity android:exported="true" android:name=".kotlin.PaymentActivity"/> <!-- Add your API key here -->
         <meta-data
             android:name="com.razorpay.ApiKey"
-            android:value="rzp_live_ILgsfZCZoFIKMb"
-            />
+            android:value="rzp_live_ILgsfZCZoFIKMb" />
         <meta-data
             android:name="com.google.android.gms.wallet.api.enabled"
             android:value="true" />
-
     </application>
+
 </manifest>
