--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,21 +2,14 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
 
-repositories {
-    mavenCentral()
-    flatDir {
-        dirs 'libs'
-    }
-}
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion '30.0.3'
+    compileSdkVersion 32
 
     defaultConfig {
         applicationId "com.razorpay.newsampleapp"
         minSdkVersion 19
-        targetSdkVersion 30
+        targetSdkVersion 32
     }
 
     buildTypes {
@@ -36,21 +29,10 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
     //For Razorpay checkout SDK
-    implementation 'com.razorpay:checkout:1.6.10'
-
-    //Enabled for google pay SDK integration
-    //You need to whitelist your app package name at Razorpay to use this.
-    //implementation(name: 'razorpay-googlepay-1.3.0', ext: 'aar')
-    //implementation(name: 'google-pay-client-api-1.0.0', ext: 'aar')
-
-    //Enable for Amazon pay SDK integration.
-    //You need to whitelist your apps package name at razrpay first to use this
-    implementation(name: 'razorpay-amazonpay-1.3.0', ext: 'aar')
-    implementation(name: 'PayWithAmazon', ext: 'aar')
-    //implementation(name: 'checkout-otpelf',ext: 'aar')
-   // implementation 'com.android.support:customtabs:28.0.0'
-
-    implementation 'com.google.android.gms:play-services-auth-api-phone:17.1.0'
-    implementation "androidx.core:core-ktx:1.3.2"
+    implementation 'com.razorpay:checkout:1.6.20'
+    implementation "androidx.core:core-ktx:1.7.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.6.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 }
