--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
 
-def githubProperties = new Properties()
-githubProperties.load(new FileInputStream(rootProject.file("github.properties")))
+
 repositories {
     maven {
         name = "GitHubPackages"
@@ -17,8 +16,8 @@ repositories {
              ** gpr.usr=GITHUB_USER_ID & gpr.key=PERSONAL_ACCESS_TOKEN
              ** Or set env variable GPR_USER & GPR_API_KEY if not adding a properties file**/
 
-            username = githubProperties['gpr.usr'] ?: System.getenv("GPR_USER")
-            password = githubProperties['gpr.key'] ?: System.getenv("GPR_API_KEY")
+            username = System.getenv("GPR_USER")?:""
+            password = System.getenv("GPR_API_KEY")?:""
         }
     }
 }
