Updated the project to run with Android Studio Otter.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,34 +1,21 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-android'
-
-
-repositories {
-    maven {
-        name = "GitHubPackages"
-        /*  Configure path to the library hosted on GitHub Packages Registry
-         *  Replace UserID with package owner userID and REPOSITORY with the repository name
-         *  e.g. "https://maven.pkg.github.com/enefce/AndroidLibraryForGitHubPackagesDemo"*/
-
-        url = uri("https://maven.pkg.github.com/vivekshindhe/TestingAndroidStandard")
-        credentials {
-            /** Create github.properties in root project folder file with
-             ** gpr.usr=GITHUB_USER_ID & gpr.key=PERSONAL_ACCESS_TOKEN
-             ** Or set env variable GPR_USER & GPR_API_KEY if not adding a properties file**/
-
-            username = System.getenv("GPR_USER")?:""
-            password = System.getenv("GPR_API_KEY")?:""
-        }
-    }
+plugins {
+    id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
 }
 
 android {
-    compileSdkVersion 32
+    namespace 'com.razorpay.sampleapp'
+    compileSdk 35
 
     defaultConfig {
-        applicationId "com.razorpay.newsampleapp"
-        minSdkVersion 19
-        targetSdkVersion 32
+        applicationId "com.razorpay.sampleapp"
+        minSdk 21
+        targetSdk 35
+        versionCode 25
+        versionName "3.5"
+
+        multiDexEnabled true
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -42,16 +29,66 @@ android {
             proguardFile 'proguard-project.txt'
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
+    }
+
+    kotlinOptions {
+        jvmTarget = '11'
+    }
+
+    buildFeatures {
+        buildConfig = true
+    }
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-
     //For Razorpay checkout SDK
-	implementation 'com.razorpay:checkout:1.6.20'
-    implementation "androidx.core:core-ktx:1.7.0"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.6.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'com.razorpay:checkout:1.6.41'
+
+    // Kotlin
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:2.0.21"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.9.0"
+
+    // AndroidX Core
+    implementation "androidx.core:core-ktx:1.15.0"
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
+    implementation 'androidx.multidex:multidex:2.0.1'
+
+    // Material Design
+    implementation 'com.google.android.material:material:1.12.0'
+
+    // Error Prone
+    implementation 'com.google.errorprone:error_prone_annotations:2.35.1'
+
+    // Networking
+    implementation 'com.squareup.retrofit2:retrofit:2.11.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.11.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.12.0'
+    implementation 'com.google.code.gson:gson:2.11.0'
+    
+    // Image Loading
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+    
+    // Analytics & Monitoring
+    implementation 'com.segment.analytics.kotlin:android:1.17.0'
+
+    // Google Play Services
+    implementation 'com.google.android.gms:play-services-auth:21.3.0'
+    implementation 'com.google.android.gms:play-services-auth-api-phone:18.1.0'
+
+    // Testing
+    testImplementation 'org.json:json:20240303'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit-ktx:1.2.1'
+    androidTestImplementation 'androidx.test:runner:1.6.2'
+    androidTestImplementation 'androidx.test:rules:1.6.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.6.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-web:3.6.1'
+    androidTestImplementation 'androidx.test:core-ktx:1.6.1'
 }
