--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,24 @@
-android.enableJetifier=true
+# Project-wide Gradle settings
+org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.configureondemand=true
+
+# AndroidX
 android.useAndroidX=true
+android.enableJetifier=true
+
+# Kotlin
+kotlin.code.style=official
+
+# Enable incremental compilation
+kotlin.incremental=true
+
+# Non-transitive R classes
+android.nonTransitiveRClass=true
+
+# Disable build features that are not used
+android.defaults.buildfeatures.aidl=false
+android.defaults.buildfeatures.renderscript=false
+android.defaults.buildfeatures.resvalues=false
+android.defaults.buildfeatures.shaders=false
